--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,6 +21,7 @@
 .creation {
   margin-top: 100vh;
   background-color: #363633;
+  padding-bottom: 200px;
   color: white;
   text-align: left;
   height: 100%;
@@ -35,12 +36,12 @@
 
 .creation_stick {
   background-color: white;
-  width: 50px;
+  width: 120px;
   height: 2px;
 }
 
 .creation_index {
-  font-size: 48px;
+  font-size: 60px;
   margin-top: 40px;
   margin-left: 60px;
   font-weight: 200;
@@ -57,6 +58,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .creation_content_left {
@@ -67,7 +70,7 @@
 .creation_image_color {
   width: 40px;
   height: 100px;
-  background-color: #b7282e;
+  background-color: white;
 }
 
 .creation_name {
