--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -23,6 +23,10 @@
 	margin-right: 25px;
 }
 
+.footer a {
+	text-decoration: underline;
+}
+
 .footer_right {
 	margin-top: 35px;
 	margin-right: 50px;
