--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,8 +24,52 @@
   font-weight: 300;
 }
 
-.creation {
+.profile {
   margin-top: 100vh;
+  margin-bottom: 250px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile_left {
+  margin-top: 130px;
+  margin-left: 200px;
+  position: relative;
+  width: 300px;
+  height: 250px;
+}
+
+.profile_right {
+  margin-top: 150px;
+  margin-right: 100px;
+  text-align: left;
+}
+
+.profile_h2 {
+  font-weight: 400;
+  font-size: 30px;
+}
+
+.profile_job {
+  font-weight: 300;
+  margin-top: 10px;
+}
+
+.profile_description {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  line-height: 28px;
+}
+
+.profile_email {
+  font-size: 20px;
+  text-decoration: underline;
+  color: #363633;
+}
+
+.creation {
   background-color: #363633;
   padding-bottom: 200px;
   color: white;
